Fix maven dependency and unit tests
The unit tests used the wrong classloader and thus failed to inject the
proper config